Add mag2tor submodule and restart script

--- a/.config/mag2tor.conf
+++ b/.config/mag2tor.conf
@@ -9,7 +9,7 @@ server {
     access_log /var/log/nginx/cmetcalfe.ca/m2t/access.log;
     error_log /var/log/nginx/cmetcalfe.ca/m2t/error.log;
     
-    root /srv/http/mag2tor;
+    root /srv/http/cmetcalfe.ca/mag2tor;
     
     location / {
         proxy_set_header X-forwarded-For $proxy_add_x_forwarded_for;
