Add redirection for old blog subdomain

--- a/.config/www.conf
+++ b/.config/www.conf
@@ -1,4 +1,9 @@
 server {
+    server_name blog.cmetcalfe.ca;
+    return 301 http://cmetcalfe.ca/blog;
+}
+
+server {
     listen 80;
     server_name cmetcalfe.ca;
 
