--- a/.gitmodules
+++ b/.gitmodules
@@ -2,5 +2,5 @@
     path = mag2tor
     url = https://github.com/pR0Ps/mag2tor.git
 [submodule "pelican-svbhack"]
-    path = .config/pelican/theme
+    path = pelican/theme
     url = https://github.com/pR0Ps/pelican-svbhack.git
