Create output subdirectory

--- a/web_config/www.conf
+++ b/web_config/www.conf
@@ -10,7 +10,7 @@ server {
     access_log   /var/log/nginx/cmetcalfe.ca/www/access.log;
     error_log   /var/log/nginx/cmetcalfe.ca/www/error.log;
     
-    root /srv/http/cmetcalfe.ca/www;
+    root /srv/http/cmetcalfe.ca/srv/www;
 
     location / {
         index index.html;
