Fix subdomain routing issue

--- a/web_config/www.conf
+++ b/web_config/www.conf
@@ -1,14 +1,16 @@
 server {
+    # Redirect the blog subdomain to the blog section of the site.
+
     server_name blog.cmetcalfe.ca;
     return 301 http://cmetcalfe.ca/blog;
 }
 
 server {
     listen 80;
-    server_name cmetcalfe.ca;
+    server_name cmetcalfe.ca www.cmetcalfe.ca;
 
-    access_log   /var/log/nginx/cmetcalfe.ca/www/access.log;
-    error_log   /var/log/nginx/cmetcalfe.ca/www/error.log;
+    access_log /var/log/nginx/cmetcalfe.ca/www/access.log;
+    error_log /var/log/nginx/cmetcalfe.ca/www/error.log;
     
     root /srv/http/cmetcalfe.ca/srv/www;
 
