--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule "mag2tor"]
     path = out/mag2tor
     url = https://github.com/pR0Ps/mag2tor.git
+[submodule "gh-i2p"]
+    path = out/gh-i2p
+    url = https://github.com/pR0Ps/gh-i2p.git
 [submodule "pelican-svbhack"]
     path = pelican/theme
     url = https://github.com/pR0Ps/pelican-svbhack.git
