--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
-[submodule "mag2tor"]
-    path = out/mag2tor
-    url = https://github.com/pR0Ps/mag2tor.git
-[submodule "gh-i2p"]
-    path = out/gh-i2p
-    url = https://github.com/pR0Ps/gh-i2p.git
-[submodule "pelican-svbhack"]
-    path = pelican/theme
-    url = https://github.com/pR0Ps/pelican-subtle.git
+[submodule "pelican/theme"]
+	path = pelican/theme
+	url = https://github.com/pR0Ps/pelican-subtle.git
+[submodule "out/mag2tor"]
+	path = out/mag2tor
+	url = https://github.com/pR0Ps/mag2tor.git
+[submodule "out/gh-i2p"]
+	path = out/gh-i2p
+	url = https://github.com/pR0Ps/gh-i2p.git
 [submodule "pelican/plugins/md_metayaml"]
 	path = pelican/plugins/md_metayaml
 	url = https://github.com/pR0Ps/pelican-md-metayaml.git
