Use submodule for pelican-sitemap plugin

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "pelican/plugins/md_metayaml"]
 	path = pelican/plugins/md_metayaml
 	url = https://github.com/pR0Ps/pelican-md-metayaml.git
+[submodule "pelican/plugins/sitemap"]
+	path = pelican/plugins/sitemap
+	url = https://github.com/pR0Ps/pelican-sitemap.git
