--- a/web_config/www.conf
+++ b/web_config/www.conf
@@ -11,13 +11,16 @@ server {
 
     access_log /var/log/nginx/cmetcalfe.ca/www/access.log;
     error_log /var/log/nginx/cmetcalfe.ca/www/error.log;
-    
+
     root {{output}}/www;
+
+    error_page 404             /404.html;
+    error_page 500 502 503 504 /50x.html;
 
     location / {
         index index.html;
     }
-    
+
     location ~ /\. {
         deny all;
         access_log off;
