--- a/web_config/www.conf
+++ b/web_config/www.conf
@@ -17,6 +17,26 @@ server {
     error_page 404             /404.html;
     error_page 500 502 503 504 /50x.html;
 
+    gzip on;
+    gzip_http_version 1.1;
+    gzip_min_length 1000;
+    gzip_vary on;
+    gzip_comp_level 2;
+    gzip_types text/plain text/css application/rss+xml application/atom+rss application/javascript;
+    gzip_disable "MSIE [1-6]\.(?!.*SV1)";
+
+    add_header Cache-Control private;
+    expires 1d;
+    location ~* \.(rss|atom)$ {
+        expires 1h;
+    }
+    location ~* \.(css|js|gif|jpe?g|png|ico|pdf)$ {
+        expires 30d;
+    }
+
+    charset utf-8;
+    charset_types text/plain text/css application/rss+xml application/atom+rss application/javascript;
+
     location / {
         index index.html;
     }
