--- a/web_config/www.conf
+++ b/web_config/www.conf
@@ -2,21 +2,37 @@ server {
     # Redirect the blog subdomain to the blog section of the site.
 
     server_name blog.cmetcalfe.ca;
-    return 301 http://cmetcalfe.ca/blog;
+    return 301 $scheme://cmetcalfe.ca/blog$uri;
+}
+server {
+    # Redirect the www subdomain to the main site
+
+    server_name www.cmetcalfe.ca;
+    return 301 $scheme://cmetcalfe.ca$uri;
 }
 
 server {
     listen 80;
-    server_name cmetcalfe.ca www.cmetcalfe.ca;
+    #listen 443 ssl;
+    server_name cmetcalfe.ca;
 
     access_log /var/log/nginx/cmetcalfe.ca/www/access.log;
     error_log /var/log/nginx/cmetcalfe.ca/www/error.log;
 
-    root {{output}}/www;
+    charset utf-8;
+    charset_types text/plain text/css application/rss+xml application/atom+rss application/javascript;
 
-    error_page 404             /404.html;
-    error_page 500 502 503 504 /50x.html;
+    # HTTPS
+    #ssl_certificate /some/path/to/fullchain.pem;
+    #ssl_certificate_key /some/path/to/privkey.pem;
+    #ssl_session_timeout 1d;
+    #ssl_session_cache shared:SSL:50m;
+    #ssl_dhparam /etc/nginx/dhparam.pem; # openssl dhparam -out dhparam.pem 2048
+    #ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    #ssl_ciphers 'ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:ECDHE-RSA-DES-CBC3-SHA:ECDHE-ECDSA-DES-CBC3-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:AES:CAMELLIA:DES-CBC3-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!EDH-DSS-DES-CBC3-SHA:!EDH-RSA-DES-CBC3-SHA:!KRB5-DES-CBC3-SHA';
+    #ssl_prefer_server_ciphers on;
 
+    # Gzip
     gzip on;
     gzip_http_version 1.1;
     gzip_min_length 1000;
@@ -25,6 +41,7 @@ server {
     gzip_types text/plain text/css application/rss+xml application/atom+rss application/javascript;
     gzip_disable "MSIE [1-6]\.(?!.*SV1)";
 
+    #Caching
     add_header Cache-Control private;
     expires 1d;
     location ~* \.(rss|atom)$ {
@@ -34,13 +51,22 @@ server {
         expires 30d;
     }
 
-    charset utf-8;
-    charset_types text/plain text/css application/rss+xml application/atom+rss application/javascript;
+    # Content
+    root {{output}}/www;
+
+    error_page 404             /404.html;
+    error_page 500 502 503 504 /50x.html;
 
     location / {
         index index.html;
     }
 
+    # Allow ACME protocol for Let's Encrypt
+    #location ~ ^/(?:blog/)?\.well-known/acme-challenge/([^/]+)$ {
+    #    alias /some/path/to/challenge/dir/$1;
+    #}
+
+    # Deny dotfiles
     location ~ /\. {
         deny all;
         access_log off;
