Enable IPv6 support

--- a/web_config/all.conf
+++ b/web_config/all.conf
@@ -1,6 +1,7 @@
 server {
     # 404 everything that doesn't match a proper subdomain
 
+    listen [::]:80;
     server_name *.cmetcalfe.ca;
     return 404;
 }
