--- a/web_config/gh-i2p.conf
+++ b/web_config/gh-i2p.conf
@@ -3,7 +3,7 @@ upstream gh-i2p {
 }
 
 server {
-    listen 80;
+    listen [::]:80;
     server_name i2p.cmetcalfe.ca;
 
     access_log /var/log/nginx/cmetcalfe.ca/i2p/access.log;
