--- a/web_config/mag2tor.conf
+++ b/web_config/mag2tor.conf
@@ -3,7 +3,7 @@ upstream mag2tor {
 }
 
 server {
-    listen 80;
+    listen [::]:80;
     server_name m2t.cmetcalfe.ca;
 
     access_log /var/log/nginx/cmetcalfe.ca/m2t/access.log;
