--- a/web_config/www.conf
+++ b/web_config/www.conf
@@ -1,19 +1,21 @@
 server {
     # Redirect the blog subdomain to the blog section of the site.
 
+    listen [::]:80;
     server_name blog.cmetcalfe.ca;
     return 301 $scheme://cmetcalfe.ca/blog$uri;
 }
 server {
     # Redirect the www subdomain to the main site
 
+    listen [::]:80;
     server_name www.cmetcalfe.ca;
     return 301 $scheme://cmetcalfe.ca$uri;
 }
 
 server {
-    listen 80;
-    #listen 443 ssl;
+    listen [::]:80;
+    #listen [::]:443 ssl;
     server_name cmetcalfe.ca;
 
     access_log /var/log/nginx/cmetcalfe.ca/www/access.log;
