--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "pelican/plugins/sitemap"]
 	path = pelican/plugins/sitemap
 	url = https://github.com/pR0Ps/pelican-sitemap.git
+[submodule "letsencrypt.sh"]
+	path = letsencrypt.sh
+	url = https://github.com/lukas2511/letsencrypt.sh.git
