--- a/web_config/nginx/www.conf
+++ b/web_config/nginx/www.conf
@@ -3,6 +3,8 @@ server {
 
     listen [::]:80;
     server_name blog.cmetcalfe.ca;
+    include {{https}}/https.conf;
+
     return 301 $scheme://cmetcalfe.ca/blog$uri;
 }
 server {
@@ -10,29 +12,21 @@ server {
 
     listen [::]:80;
     server_name www.cmetcalfe.ca;
+    include {{https}}/https.conf;
+
     return 301 $scheme://cmetcalfe.ca$uri;
 }
 
 server {
     listen [::]:80;
-    #listen [::]:443 ssl;
     server_name cmetcalfe.ca;
+    include {{https}}/https.conf;
 
     access_log /var/log/nginx/cmetcalfe.ca/www/access.log;
     error_log /var/log/nginx/cmetcalfe.ca/www/error.log;
 
     charset utf-8;
     charset_types text/plain text/css application/rss+xml application/atom+rss application/javascript;
-
-    # HTTPS
-    #ssl_certificate /some/path/to/fullchain.pem;
-    #ssl_certificate_key /some/path/to/privkey.pem;
-    #ssl_session_timeout 1d;
-    #ssl_session_cache shared:SSL:50m;
-    #ssl_dhparam /etc/nginx/dhparam.pem; # openssl dhparam -out dhparam.pem 2048
-    #ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-    #ssl_ciphers 'ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:ECDHE-RSA-DES-CBC3-SHA:ECDHE-ECDSA-DES-CBC3-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:AES:CAMELLIA:DES-CBC3-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!EDH-DSS-DES-CBC3-SHA:!EDH-RSA-DES-CBC3-SHA:!KRB5-DES-CBC3-SHA';
-    #ssl_prefer_server_ciphers on;
 
     # Gzip
     gzip on;
@@ -64,9 +58,9 @@ server {
     }
 
     # Allow ACME protocol for Let's Encrypt
-    #location ~ ^/(?:blog/)?\.well-known/acme-challenge/([^/]+)$ {
-    #    alias /some/path/to/challenge/dir/$1;
-    #}
+    location ~ ^/(?:blog/)?\.well-known/acme-challenge/([^/]+)$ {
+        alias {{https}}/.acme-challenges/$1;
+    }
 
     # Deny dotfiles
     location ~ /\. {
