--- a/web_config/nginx/www.conf
+++ b/web_config/nginx/www.conf
@@ -66,7 +66,7 @@ server {
 
     # Allow ACME protocol for Let's Encrypt
     location ~ ^/(?:blog/)?\.well-known/acme-challenge/([^/]+)$ {
-        alias {{https}}/.acme-challenges/$1;
+        alias {{https}}/.wellknown/$1;
     }
 
     # Deny dotfiles
