Refactor HTTPS setup
 - Automatically redirect HTTP to HTTPS
 - Cleaner HTTP fallback

--- a/web_config/nginx/gh-i2p.conf
+++ b/web_config/nginx/gh-i2p.conf
@@ -3,8 +3,8 @@ upstream gh-i2p {
 }
 
 server {
-    listen [::]:80;
     server_name i2p.cmetcalfe.ca;
+    include {{output}}/_config/nginx/include/global.conf;
 
     access_log /var/log/nginx/cmetcalfe.ca/i2p/access.log;
     error_log /var/log/nginx/cmetcalfe.ca/i2p/error.log;
