--- a/web_config/nginx/mag2tor.conf
+++ b/web_config/nginx/mag2tor.conf
@@ -3,8 +3,8 @@ upstream mag2tor {
 }
 
 server {
-    listen [::]:80;
     server_name m2t.cmetcalfe.ca;
+    include {{output}}/_config/nginx/include/global.conf;
 
     access_log /var/log/nginx/cmetcalfe.ca/m2t/access.log;
     error_log /var/log/nginx/cmetcalfe.ca/m2t/error.log;
