Add an {{nginx}} substitution to clean up config files

--- a/web_config/nginx/www.conf
+++ b/web_config/nginx/www.conf
@@ -2,14 +2,14 @@ server {
     # Redirect the www subdomain to the main site
 
     server_name www.cmetcalfe.ca;
-    include {{output}}/_config/nginx/include/global.conf;
+    include {{nginx}}/include/global.conf;
 
     return 301 $scheme://cmetcalfe.ca$uri;
 }
 
 server {
     server_name cmetcalfe.ca;
-    include {{output}}/_config/nginx/include/global.conf;
+    include {{nginx}}/include/global.conf;
 
     access_log /var/log/nginx/cmetcalfe.ca/www/access.log;
     error_log /var/log/nginx/cmetcalfe.ca/www/error.log;
