--- a/web_config/nginx/gh-i2p.conf
+++ b/web_config/nginx/gh-i2p.conf
@@ -4,7 +4,7 @@ upstream gh-i2p {
 
 server {
     server_name i2p.cmetcalfe.ca;
-    include {{output}}/_config/nginx/include/global.conf;
+    include {{nginx}}/include/global.conf;
 
     access_log /var/log/nginx/cmetcalfe.ca/i2p/access.log;
     error_log /var/log/nginx/cmetcalfe.ca/i2p/error.log;
