--- a/web_config/nginx/mag2tor.conf
+++ b/web_config/nginx/mag2tor.conf
@@ -4,7 +4,7 @@ upstream mag2tor {
 
 server {
     server_name m2t.cmetcalfe.ca;
-    include {{output}}/_config/nginx/include/global.conf;
+    include {{nginx}}/include/global.conf;
 
     access_log /var/log/nginx/cmetcalfe.ca/m2t/access.log;
     error_log /var/log/nginx/cmetcalfe.ca/m2t/error.log;
