--- a/web_config/nginx/www.conf
+++ b/web_config/nginx/www.conf
@@ -31,7 +31,7 @@ server {
     add_header X-Frame-Options SAMEORIGIN;
     add_header X-Content-Type-Options nosniff;
     add_header X-XSS-Protection "1; mode=block";
-    add_header Content-Security-Policy "default-src 'self'; frame-src 'self' https://disqus.com/; script-src 'self' 'unsafe-inline' https://ssl.google-analytics.com https://*.disqus.com https://*.disquscdn.com/embed.js; img-src 'self' https://gravatar.com https://referrer.disqus.com https://*.disquscdn.com/next/assets/img/; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://maxcdn.bootstrapcdn.com https://*.disquscdn.com; font-src 'self' https://fonts.gstatic.com https://maxcdn.bootstrapcdn.com";
+    add_header Content-Security-Policy "default-src 'self'; frame-src 'self' https://disqus.com/; script-src 'self' 'unsafe-inline' https://www.google-analytics.com https://*.disqus.com https://*.disquscdn.com/embed.js; img-src 'self' https://gravatar.com https://referrer.disqus.com https://*.disquscdn.com/next/embed/assets/img/; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://maxcdn.bootstrapcdn.com https://*.disquscdn.com; font-src 'self' https://fonts.gstatic.com https://maxcdn.bootstrapcdn.com";
 
     # Caching
     add_header Cache-Control private;
