--- a/web_config/https/letsencrypt.conf
+++ b/web_config/https/letsencrypt.conf
@@ -1,4 +1,6 @@
 # Hole for Let's Encrypt challenges
 location ~ ^/\.well-known/acme-challenge/([-_a-zA-Z0-9]*)$ {
+    satisfy any;
+    allow all;
     alias {{https}}/.wellknown/$1;
 }
