--- a/web_config/nginx/http/default.conf
+++ b/web_config/nginx/http/default.conf
@@ -1,6 +1,6 @@
 server {
     # 404 everything that doesn't match a specified server
-    #listen 80 default_server;
+    listen 80 default_server;
     listen [::]:80 default_server;
 
     include {{https}}/letsencrypt.conf;
