--- a/web_config/nginx/https/default.conf
+++ b/web_config/nginx/https/default.conf
@@ -1,6 +1,6 @@
 server {
     # 404 everything that doesn't match a specified server
-    #listen 443 ssl default_server;
+    listen 443 ssl default_server;
     listen [::]:443 ssl default_server;
 
     include {{https}}/letsencrypt.conf;
@@ -13,7 +13,7 @@ server {
 
 server {
     # Redirect all HTTP to HTTPS
-    #listen 80 default_server;
+    listen 80 default_server;
     listen [::]:80 default_server;
 
     return 302 https://$host$request_uri;
